[gd_scene load_steps=40 format=3 uid="uid://biqwf4rm1lnuf"]

[ext_resource type="Script" uid="uid://c20p7y6s86el3" path="res://engine/entities/entity.gd" id="1_mep48"]
[ext_resource type="Script" uid="uid://cvjjqhnynvn7m" path="res://engine/abstract_classes/entity_move_bus.gd" id="2_0mgdd"]
[ext_resource type="Script" uid="uid://c3uhvqictxnmv" path="res://engine/entities/entity_behavior.gd" id="3_ussry"]
[ext_resource type="Script" uid="uid://dub08cmps46gn" path="res://engine/abstract_classes/behavior_tree/behavior_tree_root.gd" id="4_2mo3j"]
[ext_resource type="Script" uid="uid://bl3j2m7vxf2bc" path="res://engine/abstract_classes/behavior_tree/composites/selector.gd" id="5_df3ml"]
[ext_resource type="Script" uid="uid://c2ckn3j2txow5" path="res://engine/abstract_classes/behavior_tree/decorators/note_leaf.gd" id="6_vhwqe"]
[ext_resource type="Script" uid="uid://bmkiinkj6uae8" path="res://engine/abstract_classes/behavior_tree/composites/sequencer2.gd" id="7_fyh3d"]
[ext_resource type="Script" uid="uid://10i5116o2562" path="res://engine/entities/behavior/conditions/condition_threats_nearby.gd" id="8_cvvx2"]
[ext_resource type="Script" uid="uid://hgbluutp3dhv" path="res://engine/abstract_classes/behavior_tree/decorators/inverter.gd" id="9_efnf0"]
[ext_resource type="Script" uid="uid://dujaksl8s0rra" path="res://engine/entities/behavior/conditions/recently_fled.gd" id="10_safy1"]
[ext_resource type="Script" uid="uid://8epfeqalkoqe" path="res://engine/entities/behavior/actions/flee_away.gd" id="11_xvcgl"]
[ext_resource type="Script" uid="uid://c2umhhptuv2m5" path="res://engine/entities/behavior/actions/update_recently_fled.gd" id="12_bbxnp"]
[ext_resource type="Script" uid="uid://g8onn4f6wfa1" path="res://engine/entities/behavior/conditions/has_destination.gd" id="13_u5n6w"]
[ext_resource type="Script" uid="uid://3nxghnrjlm51" path="res://engine/entities/behavior/conditions/nav_near_destination.gd" id="14_4r3li"]
[ext_resource type="Script" uid="uid://b3kuk6f6y1nqk" path="res://engine/entities/behavior/actions/keep_moving.gd" id="15_rdwt3"]
[ext_resource type="Script" uid="uid://chu8ujksgake0" path="res://engine/entities/behavior/leaves/assign_new_destination.gd" id="16_je583"]
[ext_resource type="Script" uid="uid://cki53fpug8114" path="res://engine/abstract_classes/behavior_tree/decorators/succeeder.gd" id="17_m0nev"]
[ext_resource type="Script" uid="uid://0g03hqhrhuvh" path="res://engine/abstract_classes/behavior_tree/leaves/action_leaf.gd" id="18_g4in3"]
[ext_resource type="Script" uid="uid://b0rx04rp06hig" path="res://engine/entities/entity_attributes.gd" id="19_ggoxf"]
[ext_resource type="Script" uid="uid://btfo4hwoiyn01" path="res://engine/entities/detection/entity_detector.gd" id="20_tif7v"]
[ext_resource type="Script" uid="uid://ir7kbv6gtrd4" path="res://engine/entities/entity_render.gd" id="21_vnu5j"]
[ext_resource type="Texture2D" uid="uid://0drtvxk5rlkx" path="res://assets/UI/white_icons/ArrowUpIconWhite.png" id="22_rldjx"]
[ext_resource type="Texture2D" uid="uid://dp2rl27aa2lgl" path="res://assets/UI/white_icons/white_filled_triangle.png" id="23_orenc"]
[ext_resource type="Texture2D" uid="uid://bsoi58tm3jjyk" path="res://assets/UI/white_icons/white_triangle_filled_2.png" id="24_m36lq"]
[ext_resource type="Script" uid="uid://c5sxeqam8fb71" path="res://engine/entities/render_effects.gd" id="31_87wqe"]
[ext_resource type="Script" uid="uid://b5nar15kq5bgk" path="res://engine/entities/detection/entity_emission.gd" id="32_sjgkd"]
[ext_resource type="Script" uid="uid://xv4x52mtfmfk" path="res://engine/notifications.gd" id="33_2ooeq"]
[ext_resource type="Script" uid="uid://bghndro27gihn" path="res://engine/entities/entity_synchronizer.gd" id="34_rbkdn"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8wa36"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3qfs3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e0wf7"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_8l2mg"]
radius = 30.0

[sub_resource type="SphereMesh" id="SphereMesh_54rvg"]
radius = 3.0
height = 6.0

[sub_resource type="SphereMesh" id="SphereMesh_pcy2y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x4ju4"]
resource_local_to_scene = true
transparency = 1
albedo_texture = ExtResource("23_orenc")
emission = Color(0.0999336, 0.760538, 0.826485, 1)
emission_energy_multiplier = 0.4
subsurf_scatter_strength = 0.6
subsurf_scatter_skin_mode = true
refraction_scale = -0.11
texture_repeat = false

[sub_resource type="QuadMesh" id="QuadMesh_hyfub"]
size = Vector2(2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j3cwe"]
resource_local_to_scene = true
transparency = 1
albedo_texture = ExtResource("24_m36lq")
emission = Color(0.0999336, 0.760538, 0.826485, 1)
emission_energy_multiplier = 0.4
subsurf_scatter_strength = 0.6
subsurf_scatter_skin_mode = true
refraction_scale = -0.11
texture_repeat = false

[sub_resource type="QuadMesh" id="QuadMesh_5l3g8"]
size = Vector2(2.2, 2.2)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hyfub"]

[node name="Entity2" type="RigidBody3D"]
collision_layer = 3
collision_mask = 524288
physics_material_override = SubResource("PhysicsMaterial_8wa36")
can_sleep = false
contact_monitor = true
script = ExtResource("1_mep48")
base_color = Color(0.913867, 0.546384, 0.919942, 1)
scale_factor = 0.0
can_move = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3qfs3")

[node name="NavArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
input_ray_pickable = false

[node name="EntityNavShape" type="CollisionShape3D" parent="NavArea"]
shape = SubResource("SphereShape3D_e0wf7")

[node name="EntityMoveBus" type="Node" parent="."]
script = ExtResource("2_0mgdd")

[node name="EntityBehavior" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ussry")

[node name="BehaviorTreeRoot" type="Node" parent="EntityBehavior"]
script = ExtResource("4_2mo3j")

[node name="SelectorComposite" type="Node" parent="EntityBehavior/BehaviorTreeRoot"]
script = ExtResource("5_df3ml")

[node name="Flee" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("5_df3ml")
metadata/_custom_type_script = "uid://bl3j2m7vxf2bc"

[node name="NoteLeaf" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee"]
script = ExtResource("6_vhwqe")
notes = "blackboard variables:
\"recently_fled\":bool
\"needs_reset\":bool"
metadata/_custom_type_script = "uid://c2ckn3j2txow5"

[node name="FleeNewThreat" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee"]
script = ExtResource("7_fyh3d")

[node name="ThreatSignalsNearby" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/FleeNewThreat"]
script = ExtResource("8_cvvx2")
metadata/_custom_type_script = "uid://dk82cqfncxi8f"

[node name="InverterDecorator" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/FleeNewThreat"]
script = ExtResource("9_efnf0")
metadata/_custom_type_script = "uid://hgbluutp3dhv"

[node name="RecentlyFled" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/FleeNewThreat/InverterDecorator"]
script = ExtResource("10_safy1")
metadata/_custom_type_script = "uid://dk82cqfncxi8f"

[node name="FleeAway" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/FleeNewThreat"]
script = ExtResource("11_xvcgl")

[node name="FleeExisting" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee"]
script = ExtResource("7_fyh3d")

[node name="UpdateRecentlyFled" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/FleeExisting"]
script = ExtResource("12_bbxnp")
metadata/_custom_type_script = "uid://0g03hqhrhuvh"

[node name="RecentlyFled" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/FleeExisting"]
script = ExtResource("10_safy1")
metadata/_custom_type_script = "uid://dk82cqfncxi8f"

[node name="StopFleeing" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee"]
script = ExtResource("7_fyh3d")

[node name="UpdateRecentlyFled" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/StopFleeing"]
script = ExtResource("12_bbxnp")
metadata/_custom_type_script = "uid://0g03hqhrhuvh"

[node name="RecentlyFled" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/Flee/StopFleeing"]
script = ExtResource("10_safy1")
metadata/_custom_type_script = "uid://dk82cqfncxi8f"

[node name="MoveToDestination" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("5_df3ml")

[node name="KeepMoving" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination"]
script = ExtResource("7_fyh3d")

[node name="HasDestination" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination/KeepMoving"]
script = ExtResource("13_u5n6w")

[node name="NavNearDestination" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination/KeepMoving"]
script = ExtResource("14_4r3li")

[node name="KeepMoving" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination/KeepMoving"]
script = ExtResource("15_rdwt3")

[node name="AssignNewDestination" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination"]
script = ExtResource("7_fyh3d")

[node name="HasDestination" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination/AssignNewDestination"]
script = ExtResource("13_u5n6w")

[node name="AssignNewDestination" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/MoveToDestination/AssignNewDestination"]
script = ExtResource("16_je583")
metadata/_custom_type_script = "uid://0g03hqhrhuvh"

[node name="Patrol" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="EscortTarget" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="FindTarget" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="HailTarget" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="AttackTarget" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="SeekDestroy" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="SeekHail" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="FleeSpecific" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="FindWrecks" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="SalvageWreck" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="SalvageSpecific" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("7_fyh3d")

[node name="STOP-AlwaysSucceed" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite"]
script = ExtResource("17_m0nev")

[node name="ActionLeaf" type="Node" parent="EntityBehavior/BehaviorTreeRoot/SelectorComposite/STOP-AlwaysSucceed"]
script = ExtResource("18_g4in3")

[node name="EntityCargo" type="Node" parent="."]

[node name="EntityAttributes" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("19_ggoxf")

[node name="EntityDetector" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("20_tif7v")

[node name="DetectionArea" type="Area3D" parent="EntityDetector"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="EntityDetector/DetectionArea"]
shape = SubResource("SphereShape3D_8l2mg")

[node name="EntityRender" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("21_vnu5j")

[node name="HeadingSprite" type="Sprite3D" parent="EntityRender"]
unique_name_in_owner = true
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.0259705, 0.610446, 0.010103)
texture = ExtResource("22_rldjx")

[node name="RangeSpot" type="SpotLight3D" parent="EntityRender"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.13916)
visible = false
light_color = Color(0.774024, 0.045353, 0.588677, 1)
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.265
spot_range = 20.808
spot_attenuation = -4.0
spot_angle = 55.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="EntityRender/RangeSpot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60515e-07, 0, -3.67215)
cast_shadow = 3
mesh = SubResource("SphereMesh_54rvg")
skeleton = NodePath("../../Spotlight")

[node name="Spotlight" type="SpotLight3D" parent="EntityRender"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.02185)
visible = false
light_color = Color(0.133333, 1, 1, 1)
light_energy = 2.0
light_cull_mask = 4293918721
shadow_enabled = true
shadow_bias = 0.265
spot_attenuation = -1.78
spot_angle = 10.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="EntityRender/Spotlight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.67435e-08, 0, -3.06942)
visible = false
cast_shadow = 3
mesh = SubResource("SphereMesh_pcy2y")
skeleton = NodePath("../../RangeSpot")

[node name="DepthMesh" type="MeshInstance3D" parent="EntityRender"]
unique_name_in_owner = true
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.00775754, -0.00129523, 0.000508457)
material_override = SubResource("StandardMaterial3D_x4ju4")
mesh = SubResource("QuadMesh_hyfub")
skeleton = NodePath("../..")

[node name="HighlightMesh" type="MeshInstance3D" parent="EntityRender"]
unique_name_in_owner = true
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.00775754, -0.00129523, -0.0038967)
visible = false
material_override = SubResource("StandardMaterial3D_j3cwe")
mesh = SubResource("QuadMesh_5l3g8")
skeleton = NodePath("../..")

[node name="RenderEffects" type="Node3D" parent="EntityRender"]
script = ExtResource("31_87wqe")

[node name="EntityEmission" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("32_sjgkd")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
update_rotation = false

[node name="Notifications" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("33_2ooeq")

[node name="EntitySynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hyfub")
script = ExtResource("34_rbkdn")

[node name="DebugMeshes" type="Node3D" parent="."]

[connection signal="mouse_entered" from="." to="EntityRender" method="_on_entity_mouse_entered"]
[connection signal="mouse_exited" from="." to="EntityRender" method="_on_entity_mouse_exited"]
[connection signal="body_entered" from="EntityDetector/DetectionArea" to="EntityDetector" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="EntityDetector/DetectionArea" to="EntityDetector" method="_on_detection_area_body_exited"]
